Fixed mobile layout bugs and adjusted spacing

--- a/styles.css
+++ b/styles.css
@@ -709,7 +709,7 @@ button {
     z-index: 3;
 }
 
-.hud-ring-outer {
+/*.hud-ring-outer {
     width: 120px;
     height: 120px;
     top: calc(50% - 60px);
@@ -724,7 +724,7 @@ button {
     left: calc(50% - 40px);
     animation: rotate-circle 15s linear infinite reverse;
     border-style: dotted;
-}
+}*/
 
 .floating-binary {
     position: absolute;
